# iopp

./: CMakeLists.txt  README.md
include/iopp/: bitwise_io.hpp  concepts.hpp  file_input_stream.hpp  file_output_stream.hpp  load_file.hpp  memory_mapped_file.hpp  stdin.hpp  stream_input_iterator.hpp  stream_output_iterator.hpp
include/iopp/os/: posix.hpp  windows.hpp
include/iopp/util/: bit_packer.hpp  bit_unpacker.hpp  bits.hpp  char_packer.hpp  char_unpacker.hpp  dead_end.hpp  latent_writer.hpp  output_iterator_base.hpp  overlapping_blocks.hpp  pack_word.hpp
test/: CMakeLists.txt  examples.cpp  test.cpp  test.hpp
test/files/: iota
